Fix crash because `List.of` doesn't allow null elements #69